--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@ for (var i = 0; i < navbarLinks.length; i++) {
                     <p><i class="fas fa-paper-plane"></i> tanzeeldilshad786@gmail.com</p>
                     <p><i class="fas fa-phone-square-alt"></i> +91-9559716402</p>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/tanzeel.dilshad.7?mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter-square"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/tanzeel-dilshad-81291a220"><i class="fab fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1ChA6Aq1A_jrn1MR__WycthLftdve5b4G/view?usp=drivesdk" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
