--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ for (var i = 0; i < navbarLinks.length; i++) {
                     <a href="https://drive.google.com/file/d/1ChA6Aq1A_jrn1MR__WycthLftdve5b4G/view?usp=drivesdk" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form action="https://formspree.io/f/mnqkpwnw"
+                          method="POST >
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
