--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ for (var i = 0; i < navbarLinks.length; i++) {
                 </div>
                 <div class="contact-right">
                     <form action="https://formspree.io/f/mnqkpwnw"
-                          method="POST >
+                          method="POST" >
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
